Fix logo alignment for WP Custom Logo

--- a/sass/theme/header/_middle-header.scss
+++ b/sass/theme/header/_middle-header.scss
@@ -2,6 +2,11 @@
     padding: 20px 0;
 }
 
+.custom-logo-link {
+    float: left;
+    margin-right: 10px;
+}
+
 .logo,
 .site-title-wrapper,
 .logo-wrapper {
